--- a/front/intertech/src/App.css
+++ b/front/intertech/src/App.css
@@ -1,4 +1,8 @@
 #root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
